# rmx

./: BENCHMARK.md  Cargo.toml  Dockerfile  Dockerfile.benchmark  FINAL_BENCHMARK_RESULTS.md  PKGBUILD  README.md  README_BENCHMARK.md  benchmark.sh  benchmark_heavy.sh  benchmark_medium.sh  benchmark_quick.sh  benchmark_results.txt  docker-compose.yml  install.sh  rmx-0.1.0-1-x86_64.pkg.tar.zst  uninstall.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
Tests/: file-generator.sh  rm-test.sh
pkg/rmx/: .BUILDINFO  .MTREE  .PKGINFO
rmx-deb/: installer.sh
rmx-deb/DEBIAN/: control
src/: args.rs  commands.rs  lib.rs  main.rs  upgrade.rs  util.rs
src/rmx-0.1.0/: Cargo.toml  PKGBUILD  README.md
