[package]
name = "rmx"
version = "0.4.0"
edition = "2021"
authors = ["Otabek Ismoilov <contact@ismoilovdev.com>"]
description = "Fast alternative to rm command written in Rust"
license = "MIT"
repository = "https://github.com/ismoilovdevml/rmx"

[dependencies]
rayon = "1.7.0"
termion = "2.0.1"

[lib]
name = "rmx_lib"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

