[package]
name = "rmx"
version = "0.6.1"
edition = "2021"
authors = ["Otabek Ismoilov <ismoilovdev@gmail.com>"]
description = "Fast alternative to rm command written in Rust"
license = "MIT"
repository = "https://github.com/ismoilovdevml/rmx"

[dependencies]
rayon = "1.7.0"
termion = "2.0.1"
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "rmx_lib"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

